welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: ')' expected but '[' found.
	if (talking == true && hour == [0,7] &[20,23]){
                                       ^parotTrouble:6: error: illegal start of simple expression
} 
^